# SimpleText2Motion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  config.toml  index.html  run.py
.ipynb_checkpoints/: BUILD_LINUX-checkpoint.md  BUILD_WINDOWS-checkpoint.md  BUIlD_MAC-checkpoint.md  CMakeLists-checkpoint.txt  NOTICE-checkpoint  README-checkpoint.md  README_github-checkpoint.md  Readme_win-checkpoint.md  index-checkpoint.html  run-checkpoint.py
assets/: 0.vrma  1.vrma  idle.vrma
client/: bench_t2m.py  prompts.txt  simpletool_client.py  t2m_client.py
client/.ipynb_checkpoints/: demo_client-checkpoint.py
cpp/: bench_t2m.cpp  motion_to_vrma.cpp  npz_reader.h  platform.h  run_server.cpp  t2m_infer.cpp
cpp/.ipynb_checkpoints/: config-checkpoint.h  run_server-checkpoint.cpp  t2m_infer-checkpoint.cpp
llama.cpp/: CMakeLists.txt  CODEOWNERS  LLAMA_CPP_HIDDEN_STATE_GUIDE.md  convert_hf_to_gguf.py  fused_server  fused_server.cpp  platform_net.h
llama.cpp/.devops/: openvino.Dockerfile
llama.cpp/.github/workflows/: build-android.yml  build-cross.yml  build-openvino.yml  build-self-hosted.yml  build.yml  release.yml
llama.cpp/common/: CMakeLists.txt  arg.cpp  chat-auto-parser-generator.cpp  chat.cpp  chat.h  common.cpp  common.h  download.cpp  fit.cpp  fit.h  hf-cache.cpp  log.cpp  log.h  ngram-map.cpp  sampling.cpp  speculative.cpp  speculative.h
llama.cpp/docs/backend/: OPENVINO.md
llama.cpp/examples/bench-batch/: 01-test-parallel-basic.cpp
llama.cpp/examples/diffusion/: CMakeLists.txt
llama.cpp/examples/save-load-state/: CMakeLists.txt
llama.cpp/ggml/: CMakeLists.txt
llama.cpp/ggml/src/: ggml-backend-meta.cpp
llama.cpp/ggml/src/ggml-cpu/: arch-fallback.h  quants.c
llama.cpp/ggml/src/ggml-cpu/arch/x86/: quants.c
llama.cpp/ggml/src/ggml-cuda/: common.cuh  fattn-mma-f16.cuh  ggml-cuda.cu  mma.cuh  mmq.cuh
llama.cpp/ggml/src/ggml-cuda/vendors/: hip.h  musa.h
llama.cpp/ggml/src/ggml-hexagon/: ggml-hexagon.cpp  libggml-htp.inf
llama.cpp/ggml/src/ggml-hexagon/htp/: CMakeLists.txt  htp-ctx.h  htp-ops.h  main.c
llama.cpp/ggml/src/ggml-metal/: ggml-metal.cpp
llama.cpp/ggml/src/ggml-opencl/: ggml-opencl.cpp
llama.cpp/ggml/src/ggml-rpc/: ggml-rpc.cpp
llama.cpp/ggml/src/ggml-sycl/: mmvq.cpp
llama.cpp/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
llama.cpp/ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
llama.cpp/ggml/src/ggml-webgpu/: ggml-webgpu-shader-lib.hpp  ggml-webgpu.cpp
llama.cpp/ggml/src/ggml-webgpu/wgsl-shaders/: common_decls.tmpl  flash_attn_vec_blk.wgsl  mul_mat_vec.wgsl
llama.cpp/include/: llama.h
llama.cpp/pocs/vdot/: CMakeLists.txt
llama.cpp/scripts/: sync-ggml.last  sync_vendor.py
llama.cpp/src/: llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-model.cpp  llama-model.h  llama.cpp
llama.cpp/src/models/: qwen3.cpp  test_hidden.cpp
llama.cpp/tests/: CMakeLists.txt  test-chat.cpp
llama.cpp/tools/batched-bench/: CMakeLists.txt
llama.cpp/tools/cli/: CMakeLists.txt  cli.cpp
llama.cpp/tools/completion/: CMakeLists.txt
llama.cpp/tools/fit-params/: CMakeLists.txt  fit-params.cpp
llama.cpp/tools/llama-bench/: CMakeLists.txt  llama-bench.cpp
llama.cpp/tools/mtmd/: CMakeLists.txt  clip-impl.h  clip-model.h  clip.cpp  mtmd-helper.cpp  mtmd-helper.h  mtmd.cpp  mtmd.h
llama.cpp/tools/perplexity/: CMakeLists.txt  perplexity.cpp
llama.cpp/tools/quantize/: CMakeLists.txt  quantize.cpp
llama.cpp/tools/server/: CMakeLists.txt  README.md  server-chat.cpp  server-chat.h  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-http.cpp  server-models.cpp  server-task.cpp  server-task.h  server.cpp
llama.cpp/tools/server/tests/: utils.py
llama.cpp/tools/server/tests/unit/: test_kv_keep_only_active.py
scripts/: start_servers.ps1  start_servers.sh  start_servers_.sh  stop_servers.sh
scripts/.ipynb_checkpoints/: start_servers-checkpoint.ps1  start_servers-checkpoint.sh
